# CAN-Adapt-Unsupervised-Cross-Vehicle-Domain-Adaptation-for-CAN-Bus-Intrusion-Detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: DATASETS.md
scripts/: arsenal_demo.py
src/can_mmd_ids/: __init__.py  cli.py  features.py  mmd.py  model.py  training.py
